<resources>
    <string name="app_name">lab1</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="logButton">login now</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="radioB">RadioButton</string>
    <string name="checkB">CheckBox</string>
    <string name="sw">Enable Something</string>
    <string name="dialog_title">Finish</string>
    <string name="dialog_message">Do you want to finish the activity?</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="STB">Start Chat</string>
    <string name="sendButton">Send</string>
    <string name="TXV">TextView</string>
    <string name="WeatherButton">Weather Button</string>

</resources>
