<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_list_items"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:rowCount="2"
    android:columnCount="2"
    tools:context="com.example.wang.lab1.ListItemsActivity">

<RadioButton
    android:text="@string/radioB"
    android:layout_row="0"
    android:layout_column="0"
    android:layout_columnWeight="1"
    android:gravity="fill"
    />
<CheckBox
    android:text="@string/checkB"
    android:layout_row="0"
    android:layout_column="1"
    android:layout_columnWeight="1"
    android:gravity="fill"
    />

    <ImageButton android:background="@android:drawable/btn_star_big_on"
    android:layout_row="1"
    android:layout_column="1"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
    android:layout_columnWeight="1"
    android:gravity="fill"/>

    <Switch
        android:text="@string/sw"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:gravity="fill"
        />
</GridLayout>
