<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/content_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.wang.lab1.LoginActivity"
    tools:showIn="@layout/activity_login"
    android:weightSum="1">

    <TextView
        android:text="@string/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        />

    <EditText
        android:id="@+id/editTextLogin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="login name"
    android:inputType="textEmailAddress"
    android:layout_weight="0.05" />
    <TextView
        android:text="@string/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="password"
        android:inputType="textPassword"
        android:layout_weight="0.05" />

    <Button
        android:text="@string/logButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/loginButton" />
</LinearLayout>
